--- a/frontend/css/global.css
+++ b/frontend/css/global.css
@@ -8,10 +8,19 @@ main {
 }
 
 .editor {
+    grid-area: 1/1/2/2;
     background: black;
     color: white;
     caret-color: yellow;
+    word-wrap: break-word;
+    word-break: break-all;
     
+}
+
+.parsed {
+    grid-area: 1/2/2/3;
+    word-wrap: break-word;
+    word-break: break-all;
 }
 
 /* .editor-container {
